squished deep array copy issue

--- a/src/components/GameCard/style.css
+++ b/src/components/GameCard/style.css
@@ -1,14 +1,17 @@
 .card {
   background: #fff;
   border-radius: 2px;
-  height: 325px;
+  /* height: 325px; */
   margin: 1rem;
   position: relative;
-  width: 325px;
+  /* width: 325px; */
   box-shadow: 0 3px 6px #999, 0 3px 6px #999;
   text-align: left;
 }
 
+.display-4 {
+  margin: 0px;
+}
 .card > .img-container {
   height: 60%;
   overflow: hidden;
@@ -22,4 +25,22 @@
 
 .card:hover {
   border: 5px solid black;
+}
+.score {
+  font-size: 2em;
+}
+.highScore {
+  font-size: 2em;
+  margin-left: 2em;
+}
+.infoContainer {
+  display: flex;
+  justify-content: center;
+}
+.status {
+  font-size: 2em;
+  margin-left: 2em;
+}
+.title {
+  text-align: center;
 }
